
[TestVarDecls - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "const foo = 5;\nlet bar = \"hello\";\n",
    SourceMap: "{\"version\":3,\"file\":\"input.js\",\"sources\":[\"input.esc\"],\"sourcesContent\":[\"val foo = 5\\nvar bar = \\\"hello\\\"\\n\"],\"names\":[],\"mappings\":\"AAAA,YAAU;AACV,UAAU\"}",
}
---

[TestFuncDecls - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "function add(a, b) {\n  return a + b;\n}\nfunction sub(a, b) {\n  return a - b;\n}\nconst sum = add(1, 2);\n",
    SourceMap: "{\"version\":3,\"file\":\"input.js\",\"sources\":[\"input.esc\"],\"sourcesContent\":[\"fn add(a, b) {\\n  return a + b\\n}\\nfn sub(a, b) { return a - b }\\nval sum = add(1, 2)\\n\"],\"names\":[],\"mappings\":\"AAAA;EACE,OAAO;;AAET;EAAe,OAAO;;AACtB,YAAU\"}",
}
---

[TestArrays - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "const nums = [1, 2, 3];\nconst first = nums[0];\n",
    SourceMap: "{\"version\":3,\"file\":\"input.js\",\"sources\":[\"input.esc\"],\"sourcesContent\":[\"val nums = [1, 2, 3]\\nval first = nums[0]\\n\"],\"names\":[],\"mappings\":\"AAAA,aAAW;AACX,cAAY\"}",
}
---

[TestMemberAccess - 1]
compiler.CompilerOutput{
    Errors: {
    },
    JS:        "console.log(\"x =\", -5);\n",
    SourceMap: "{\"version\":3,\"file\":\"input.js\",\"sources\":[\"input.esc\"],\"sourcesContent\":[\"console.log(\\\"x =\\\", -5)\\n\"],\"names\":[],\"mappings\":\"AAAA\"}",
}
---
